--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -2,39 +2,119 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello, World! • A-Frame three.ar.js</title>
-    <meta name="description" content="Hello, World! • A-Frame three.ar.js">
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-    <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
-    <script src="../dist/aframe-three-ar.js"></script>
-    <script src="https://3d.io/releases/3dio-js/1.0.x-beta/3dio.min.js"></script>
-</head>
-<body onclick="swapFurniture()">
-<a-scene three-ar vr-mode-ui="enabled:false">
-    <!-- get more furniture here https://furniture.3d.io/#furnitureId=5b130c33-e3a8-4504-92e6-0b139fa96089 -->
-    <a-entity io3d-furniture="id:5b130c33-e3a8-4504-92e6-0b139fa96089" position="0 -1.3 -2"></a-entity>
-    <a-sphere radius="0.1" color="orange" position="0 1 -2"></a-sphere>
-</a-scene>
-<script>
-    let furnitureEl = document.querySelector('a-entity[io3d-furniture]')
-    let furniture = furnitureEl.getAttribute('io3d-furniture')
-    let alternatives
-    let counter = 0
-    // get alternatives for given furniture
-    io3d.homeStaging.replaceFurniture(furniture.id, {position: furnitureEl.getAttribute('position')})
-        .then(result => {
-            alternatives = result
-        })
+    <title>8th Wall Web: Tap to place</title>
 
-    function swapFurniture() {
-        if (alternatives.length === 0) return
-        // set new id
-        furnitureEl.setAttribute('io3d-furniture', {id: alternatives[counter].furniture.id})
-        // set new position to center it again based on the dinemsions
-        furnitureEl.setAttribute('position', AFRAME.utils.coordinates.stringify(alternatives[counter].position))
-        counter++
-        if (counter >= alternatives.length) counter = 0
-    }
-</script>
+    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
+    <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
+    <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>
+
+    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
+         See github.com/8thwall/web/xrextras -->
+    <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
+
+    <!-- 8thWall Web - Replace the app key here with your own app key -->
+    <script async
+            src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
+
+    <script>
+        AFRAME.registerComponent('navonclick', {
+            schema: {
+                url: {default: ''}
+            },
+
+            init: function () {
+                var data = this.data;
+                var el = this.el;
+
+                el.addEventListener('click', function () {
+                    setTimeout(
+                        function () {
+                            window.location.href = data.url;//事件处理
+                        }, 500)
+                });
+            }
+        });
+    </script>
+
+    <script>
+        // Component that places trees where the ground is clicked
+        AFRAME.registerComponent('tap-place', {
+            init: function () {
+                const ground = document.getElementById('ground')
+                ground.addEventListener('click', event => {
+                    // Create new entity for the new object
+                    const newElement = document.createElement('a-entity')
+
+                    // The raycaster gives a location of the touch in the scene
+                    const touchPoint = event.detail.intersection.point
+                    newElement.setAttribute('position', touchPoint)
+
+                    const randomYRotation = Math.random() * 360
+                    newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
+
+                    newElement.setAttribute('visible', 'false')
+                    newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
+
+                    newElement.setAttribute('gltf-model', '#KTC')
+                    this.el.sceneEl.appendChild(newElement)
+
+                    newElement.addEventListener('model-loaded', () => {
+                        // Once the model is loaded, we are ready to show it popping in using an animation
+                        newElement.setAttribute('visible', 'true')
+                        newElement.setAttribute('animation', {
+                            property: 'scale',
+                            to: '1 1 1',
+                            easing: 'easeOutElastic',
+                            dur: 800,
+                        })
+                        newElement.setAttribute('navonclick', 'url: index.html')
+                    })
+                }, {once: true})
+            }
+        })
+    </script>
+</head>
+
+<body>
+<!-- We must add the tap-place component to the scene so it has an effect -->
+<a-scene
+        xrweb
+        tap-place
+        xrextras-almost-there
+        xrextras-loading
+        xrextras-runtime-error>
+
+    <!-- We can define assets here to be loaded when A-Frame initializes -->
+    <a-assets>
+        <a-asset-item id="KTC" src="GLTF/ALL.gltf"></a-asset-item>
+    </a-assets>
+
+    <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
+    <a-camera
+            position="0 8 0"
+            raycaster="objects: .cantap"
+            cursor="
+          fuse: false;
+          rayOrigin: mouse;">
+    </a-camera>
+
+    <a-entity
+            light="type: directional;
+               intensity: 0.8;"
+            position="1 4.3 2.5">
+    </a-entity>
+
+    <a-light type="ambient" intensity="1"></a-light>
+
+    <!-- Adding the cantap class allows the ground to be clicked -->
+    <a-entity
+            id="ground"
+            class="cantap"
+            geometry="primitive: box"
+            material="color: #ffffff; transparent: true; opacity: 0.0"
+            scale="1000 2 1000"
+            position="0 -1 0">
+    </a-entity>
+</a-scene>
 </body>
 </html>
