--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -7,25 +7,26 @@
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script type="text/javascript"
             src="https://api.map.baidu.com/api?v=3.0&ak=CqubwDmuDc6oFRXAZoAkiHdqagQpreM0"></script>
-    <script>
-        AFRAME.registerComponent('navonclick', {
-            schema: {
-                url: {default: ''}
-            },
+<!--    <script>-->
+<!--        AFRAME.registerComponent('navonclick', {-->
+<!--            schema: {-->
+<!--                url: {default: ''}-->
+<!--            },-->
 
-            init: function () {
-                var data = this.data;
-                var el = this.el;
+<!--            init: function () {-->
+<!--                var data = this.data;-->
+<!--                var el = this.el;-->
 
-                el.addEventListener('click', function () {
-                    setTimeout(
-                        function () {
-                            window.location.href = data.url;//事件处理
-                        }, 500)
-                });
-            }
-        });
-    </script>
+<!--                el.addEventListener('click', function () {-->
+<!--                    setTimeout(-->
+<!--                        function () {-->
+<!--                            window.location.href = data.url;//事件处理-->
+<!--                        }, 500)-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    </script>-->
+
     <script>
         // Component that places trees where the ground is clicked
         AFRAME.registerComponent('tap-place', {
@@ -65,11 +66,13 @@
             }
         })
     </script>
+
     <script>
         setInterval(function () {
-            document.elementFromPoint(1, 1).click();
+            document.getElementById("house").addEventListener("click", event=>{
+                window.location.href = "index.html"
+            })
         }, 50)
-
     </script>
 </head>
 
