--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -17,31 +17,11 @@
             src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
 
     <script>
-        AFRAME.registerComponent('navonclick', {
-            schema: {
-                url: {default: ''}
-            },
-
-            init: function () {
-                var data = this.data;
-                var el = this.el;
-
-                el.addEventListener('click', function () {
-                    setTimeout(
-                        function () {
-                            window.location.href = data.url;//事件处理
-                        }, 500)
-                });
-            }
-        });
-    </script>
-
-    <script>
         // Component that places trees where the ground is clicked
         AFRAME.registerComponent('tap-place', {
             init: function () {
                 const ground = document.getElementById('ground')
-                ground.addEventListener('mousedown', event => {
+                ground.addEventListener('click', event => {
                     // Create new entity for the new object
                     const newElement = document.createElement('a-entity')
 
@@ -73,6 +53,14 @@
                 }, {once: true})
             }
         })
+    </script>
+
+    <script>
+        setInterval(function () {
+            document.getElementById("house").addEventListener("click", event=>{
+                window.location.href = "index.html"
+            })
+        }, 50)
     </script>
 </head>
 
