--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -6,65 +6,64 @@
 
     <link rel="stylesheet" type="text/css" href="animation-mixer/index.css">
 
-    <script>
-        window.onload = function () {
-            if(!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent) )) {
-                window.location.href = "room.html"
-            }
-        };
-    </script>
+        <script>
+            window.onload = function () {
+                if(!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent) )) {
+                    window.location.href = "room.html"
+                }
+            };
+        </script>
 
-    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
-    <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
-    <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>
-    <script src="//cdn.8thwall.com/web/aframe/aframe-extras-4.2.0.min.js"></script>
+        <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
+        <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
+        <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>
+        <script src="//cdn.8thwall.com/web/aframe/aframe-extras-4.2.0.min.js"></script>
 
-    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
-         See github.com/8thwall/web/xrextras -->
-    <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
+        <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
+             See github.com/8thwall/web/xrextras -->
+        <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
 
-    <!-- 8thWall Web - Replace the app key here with your own app key -->
-    <script async
-            src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
+        <!-- 8thWall Web - Replace the app key here with your own app key -->
+        <script async
+                src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
 
-    <script>
-        // Component that places trees where the ground is clicked
-        AFRAME.registerComponent('tap-place', {
-            init: function () {
-                const ground = document.getElementById('ground')
-                ground.addEventListener('click', event => {
-                    // Create new entity for the new object
-                    const newElement = document.createElement('a-entity')
+        <script>
+            // Component that places trees where the ground is clicked
+            AFRAME.registerComponent('tap-place', {
+                init: function () {
+                    const ground = document.getElementById('ground')
+                    ground.addEventListener('click', event => {
+                        // Create new entity for the new object
+                        const newElement = document.createElement('a-entity')
 
-                    // The raycaster gives a location of the touch in the scene
-                    const touchPoint = event.detail.intersection.point
-                    newElement.setAttribute('position', touchPoint)
+                        // The raycaster gives a location of the touch in the scene
+                        const touchPoint = event.detail.intersection.point
+                        newElement.setAttribute('position', touchPoint)
 
-                    const randomYRotation = Math.random() * 360
-                    newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
+                        const randomYRotation = Math.random() * 360
+                        newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
 
-                    newElement.setAttribute('visible', 'false')
-                    newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
+                        newElement.setAttribute('visible', 'false')
+                        newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
 
-                    newElement.setAttribute('gltf-model', '#KTC')
-                    this.el.sceneEl.appendChild(newElement)
+                        newElement.setAttribute('gltf-model', '#KTC')
+                        this.el.sceneEl.appendChild(newElement)
 
-                    newElement.addEventListener('model-loaded', () => {
-                        // Once the model is loaded, we are ready to show it popping in using an animation
-                        newElement.setAttribute('visible', 'true')
-                        newElement.setAttribute('id', 'house')
-                        newElement.setAttribute('animation', {
-                            property: 'scale',
-                            to: '0.2 0.2 0.2',
-                            easing: 'easeOutElastic',
-                            dur: 800,
+                        newElement.addEventListener('model-loaded', () => {
+                            // Once the model is loaded, we are ready to show it popping in using an animation
+                            newElement.setAttribute('visible', 'true')
+                            newElement.setAttribute('id', 'house')
+                            newElement.setAttribute('animation', {
+                                property: 'scale',
+                                to: '0.2 0.2 0.2',
+                                easing: 'easeOutElastic',
+                                dur: 800,
+                            })
                         })
-                    })
-                }, {once: true})
-            }
-        })
-
-    </script>
+                    }, {once: true})
+                }
+            })
+        </script>
 
     <script>
         setInterval(function () {
@@ -77,8 +76,8 @@
 
 <body>
 
-<a href="room.html">
-    <div class="nextbutton" id="nextbutton">进入小屋</div>
+<a href="room.html" id="nextbutton">
+    <div class="nextbutton">进入小屋</div>
 </a>
 
 <!-- We must add the tap-place component to the scene so it has an effect -->
