--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -6,64 +6,66 @@
 
     <link rel="stylesheet" type="text/css" href="animation-mixer/index.css">
 
-<!--    <script>-->
-<!--        window.onload = function () {-->
-<!--            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {-->
-<!--                window.location.href = "room.html"-->
-<!--            }-->
-<!--        };-->
-<!--    </script>-->
+    <script>
+        window.onload = function () {
+            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {
+                window.location.href = "room.html"
+            }
+        };
+    </script>
 
-<!--    &lt;!&ndash; We've included a slightly modified version of A-Frame, which fixes some polish concerns &ndash;&gt;-->
-<!--    <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>-->
-<!--    <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>-->
-<!--    <script src="//cdn.8thwall.com/web/aframe/aframe-extras-4.2.0.min.js"></script>-->
+    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
+    <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
+    <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>
+    <script src="//cdn.8thwall.com/web/aframe/aframe-extras-4.2.0.min.js"></script>
 
-<!--    &lt;!&ndash; XR Extras - provides utilities like load screen, almost there, and error handling.-->
-<!--         See github.com/8thwall/web/xrextras &ndash;&gt;-->
-<!--    <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>-->
+    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
+         See github.com/8thwall/web/xrextras -->
+    <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
 
-<!--    &lt;!&ndash; 8thWall Web - Replace the app key here with your own app key &ndash;&gt;-->
-<!--    <script async-->
-<!--            src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>-->
+    <!-- 8thWall Web - Replace the app key here with your own app key -->
+    <script async
+            src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
 
-<!--    <script>-->
-<!--        // Component that places trees where the ground is clicked-->
-<!--        AFRAME.registerComponent('tap-place', {-->
-<!--            init: function () {-->
-<!--                const ground = document.getElementById('ground')-->
-<!--                ground.addEventListener('click', event => {-->
-<!--                    // Create new entity for the new object-->
-<!--                    const newElement = document.createElement('a-entity')-->
+    <script src="JS/aframe-particle-system-component.min.js"></script>
 
-<!--                    // The raycaster gives a location of the touch in the scene-->
-<!--                    const touchPoint = event.detail.intersection.point-->
-<!--                    newElement.setAttribute('position', touchPoint)-->
+    <script>
+        // Component that places trees where the ground is clicked
+        AFRAME.registerComponent('tap-place', {
+            init: function () {
+                const ground = document.getElementById('ground')
+                ground.addEventListener('click', event => {
+                    // Create new entity for the new object
+                    const newElement = document.createElement('a-entity')
 
-<!--                    const randomYRotation = Math.random() * 360-->
-<!--                    newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')-->
+                    // The raycaster gives a location of the touch in the scene
+                    const touchPoint = event.detail.intersection.point
+                    newElement.setAttribute('position', touchPoint)
 
-<!--                    newElement.setAttribute('visible', 'false')-->
-<!--                    newElement.setAttribute('scale', '0.0001 0.0001 0.0001')-->
+                    const randomYRotation = Math.random() * 360
+                    newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
 
-<!--                    newElement.setAttribute('gltf-model', '#KTC')-->
-<!--                    this.el.sceneEl.appendChild(newElement)-->
+                    newElement.setAttribute('visible', 'false')
+                    newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
 
-<!--                    newElement.addEventListener('model-loaded', () => {-->
-<!--                        // Once the model is loaded, we are ready to show it popping in using an animation-->
-<!--                        newElement.setAttribute('visible', 'true')-->
-<!--                        newElement.setAttribute('id', 'house')-->
-<!--                        newElement.setAttribute('animation', {-->
-<!--                            property: 'scale',-->
-<!--                            to: '0.2 0.2 0.2',-->
-<!--                            easing: 'easeOutElastic',-->
-<!--                            dur: 800,-->
-<!--                        })-->
-<!--                    })-->
-<!--                }, {once: true})-->
-<!--            }-->
-<!--        })-->
-<!--    </script>-->
+                    newElement.setAttribute('gltf-model', '#KTC')
+                    this.el.sceneEl.appendChild(newElement)
+
+                    newElement.addEventListener('model-loaded', () => {
+                        // Once the model is loaded, we are ready to show it popping in using an animation
+                        newElement.setAttribute('visible', 'true')
+                        newElement.setAttribute('id', 'house')
+                        newElement.setAttribute('animation', {
+                            property: 'scale',
+                            to: '0.2 0.2 0.2',
+                            easing: 'easeOutElastic',
+                            dur: 800,
+                        })
+                    })
+                }, {once: true})
+            }
+        })
+    </script>
 
     <script>
         setInterval(function () {
@@ -71,10 +73,24 @@
                 document.getElementById("nextbutton").style.display = "block";
             }
         }, 50)
+        function playPause() {
+            var audio = document.getElementById("bgMusic");
+            if(audio.paused){
+                audio.play();
+            }
+            else{
+                audio.pause();
+            }
+        }
     </script>
 </head>
 
 <body>
+<audio id="bgMusic" src="JingleBells.mp3" autoplay="autoplay" loop="loop"></audio>
+
+<div id="musicPlay" onclick="playPause()">
+🎶
+</div>
 
 <a href="room.html" id="nextbutton">
     <div class="nextbutton">进入小屋</div>
@@ -87,6 +103,8 @@
         xrextras-almost-there
         xrextras-loading
         xrextras-runtime-error>
+
+    <a-entity position="0 2.25 -15" particle-system="preset: snow; particleCount: 5000"></a-entity>
 
     <!-- We can define assets here to be loaded when A-Frame initializes -->
     <a-assets>
